--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
