--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "expo": "~37.0.3",
+    "expo-constants": "^9.1.1",
     "expo-permissions": "^8.1.0",
     "jetifier": "^1.6.6",
     "react": "~16.9.0",
